--- a/package.json
+++ b/package.json
@@ -14,31 +14,36 @@
   "license": "MIT",
   "devDependencies": {
     "@types/google.analytics": "0.0.28",
-    "@types/react": "^0.14.50",
+    "@types/react": "^0.14.54",
     "@types/react-dom": "^0.14.19",
+    "@types/react-redux": "^4.4.35",
     "autoprefixer": "^6.5.3",
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
+    "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "browser-sync": "^2.18.2",
-    "eslint": "^3.10.2",
+    "eslint": "^3.11.1",
     "gulp": "^3.9.1",
     "gulp-header": "^1.8.8",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
     "gulp-sass": "^2.3.2",
     "gulp-typescript": "^3.1.3",
+    "redux-devtools": "^3.3.1",
     "run-sequence": "^1.2.2",
-    "tslint": "^4.0.1",
-    "typescript": "^2.0.10",
+    "tslint": "^4.0.2",
+    "typescript": "^2.1.4",
     "webpack": "2.1.0-beta.27",
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
     "core-js": "^2.4.1",
+    "jaco": "^2.0.0-beta.2",
     "normalize.css": "^5.0.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0"
   }
 }
